# polyglot-crap

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ci-guide.md
src/: config.rs  coverage.rs  delta.rs  language.rs  lib.rs  main.rs  merge.rs  report.rs  score.rs
src/complexity/: mod.rs  walker.rs
src/complexity/queries/: c_cc.scm  cpp_cc.scm  csharp_cc.scm  go_cc.scm  go_fn.scm  java_fn.scm  javascript_cc.scm  php_cc.scm  python_cc.scm  ruby_cc.scm  typescript_cc.scm
src/report/: github.rs  human.rs  json.rs  links.rs  markdown.rs  per_crate.rs  pr_comment.rs  sarif.rs  summary.rs  test_support.rs  types.rs
tests/: debug_java.rs  query_validation.rs
