[package]
name = "polycrap"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Change Risk Anti-Patterns (CRAP) metric for any programming language"
license = "MIT"
keywords = ["code-quality", "coverage", "complexity", "metrics", "polyglot"]
categories = ["development-tools", "development-tools::testing"]

[[bin]]
name = "polycrap"
path = "src/main.rs"

[lib]
name = "polycrap"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
comfy-table = "7"
globset = "0.4"
ignore = "0.4"
rayon = "1"
indicatif = "0.18.4"
lcov = "0.8"
owo-colors = "4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }

# tree-sitter core + all language grammars
tree-sitter = "0.25"
tree-sitter-python     = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go         = "0.23"
tree-sitter-java       = "0.23"
tree-sitter-c-sharp    = "0.23"
tree-sitter-ruby       = "0.23"
tree-sitter-rust       = "0.23"
tree-sitter-c          = "0.23"
tree-sitter-cpp        = "0.23"
tree-sitter-php        = "0.23"
streaming-iterator     = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
jsonschema = { version = "0.46", default-features = false }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
implicit_hasher = "allow"
